--- a/package.json
+++ b/package.json
@@ -14,20 +14,21 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.4",
     "@types/sequelize": "^4.28.11",
-    "@types/validator": "^13.7.1"
+    "@types/validator": "^13.7.1",
+    "@types/moment": "^2.13.0",
+    "@types/moment-timezone": "^0.5.30"
   },
-
   "dependencies": {
     "axios": "^0.25.0",
     "cors": "^2.8.5",
     "dotenv": "^14.2.0",
     "express": "^4.17.2",
-    "moment": "^2.29.1"
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.34"
   }
 }
