--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -7,7 +7,7 @@ pipeline {
                 docker { image 'node:16.13.1-alpine' }
             }
             steps {
-                sh "node --version"
+                sh "npm install typescript"
             }
         }
     }
