--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -10,5 +10,13 @@ pipeline {
                 sh "npm install typescript"
             }
         }
+        stage('install') {
+            agent {
+                docker { image 'node:16.13.1-alpine' }
+            }
+            steps {
+                sh "npm install typescript"
+            }
+        }
     }
 }
